SLING-12284 apply spotless code formatting